# graphlammps

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  install.sh  pyproject.toml  setup.py
docs/: README.atom  README.create  README.lmp_system  README.params  README.read_structure
examples/: TODO.md
examples/Identify_Recomb/: Identify-Recomb.py  README
examples/create/graphite/: README  create_graphite.py  graphite_slab.lmp  graphite_slab.xyz
examples/dump2lmp/: README  coords.dump  coords.lmp  dump2lmp.py
examples/parse_surface/: Ads_O_bridge_v_top.py  README
examples/tecplot_data/: Prob_1200_1000.npy  Prob_1200_1200.npy  Prob_1200_1500.npy  Prob_1200_1800.npy  Prob_1200_2000.npy  README.md  Test_tecplot_data.py
graphlammps/: atom.py  bond.py  create.py  lmp_system.py  molecule.py  params.py  read_structure.py  species.py
graphlammps/special/: parse_bonds.py  sequential_colls.py  tecplot_data.py
