# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "graphlammps"
version = "0.0.1"
description = "Python package to pre-process and post-process LAMMPS simulations of graphitic systems"
readme = "README.md"
authors = ["Chaithanya Kondur <ckondur2@illinois.edu>"]
license = "MIT"
repository = "https://github.com/chaithanyak4796/graphlammps"

# ...
packages = [
    { include = "graphlammps" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.20.0"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"
autoflake8 = "^0.3"

[tool.black]
# https://github.com/psf/black
target-version = ["py38"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''
